    - Fixed Blue Tiberium sometimes causing the Tiberium growth to fail
  Changes:
    - Tiberium now deals 4 times as much damage to structures when it spreads
    - Reduced Tiberium damage taken from upgrades now also applies to structures
  Features:
    - Added a setting to add a burner tier to Tiberium Centrifuges (this was in 1.1.25 but I forgot to mention it)
---------------------------------------------------------------------------------------------------
Version: 1.1.25
  Bugfixes:
    - Fixed Mining Drones dying to Blue Tiberium
    - Fixed Tiberium Centrifuge icon colors being in the wrong order
    - Added missing localisation for some alerts
    - Fixed Growth Accelerators being 5 times too loud
    - Fixed Obelisks of Light attacking targets that are already dead
    - Fixed Obelisk of Light having a misleading attack frequency tooltip
  Changes:
    - Changed Informatron to an optional dependency
    - Improved balance when used with Space Exploration
    - Tiberium Seed Rockets can no longer spawn Tiberium Blossom Trees close together
    - Renamed Growth Credits to Tiberium Substrate
    - Made the Tiberium Substrate recipes twice as fast (except for the ingredientless recipe)
    - Tiberium now spreads much more rapidly when consuming resource patches
    - Tiberium Military 1 now reduces Tiberium damage taken by 75% instead of 80%
    - Reduced some of the higher emission multipliers
    - Adjusted MARV recipe
    - Tiberium Growth Acceleration is now required for Tiberium Nuclear Physics
  Features:
    - Added Tiberium Detonation Charge for destroying Tiberium Blossom Trees
    - Added Tiberium Reprocessor structure for more rapidly recycling unused ores into Tiberium Substrate (reused Crusher from Krastorio 2)
    - Added Tiberium-Primed Reactant, a new ingredient for the ore transmutation recipes
    - Added a new recipe for using Blue Tiberium in the transmutation process